# HouseholdInventory

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: pytest.yml
app/: __init__.py  auth.py  config.py  db.py  main.py
app/models/: __init__.py  household.py  item.py
app/routes/: __init__.py  auth.py  items.py
app/services/: __init__.py  accounts.py  items.py
app/static/: styles.css
app/templates/: base.html
app/templates/auth/: login.html  password_reset_form.html  register.html  token_notice.html  token_request.html  token_result.html
app/templates/household/: members.html
app/templates/items/: form.html  list.html  table.html
migrations/: env.py
migrations/versions/: 20260419_0001_initial_schema.py  20260419_0002_quantity_float.py  20260419_0003_soft_delete_history.py  20260419_0004_count_size_units.py  20260419_0005_user_auth_households.py  20260420_0006_email_verified_at.py
tests/: test_app.py
